refactor: Update app name and metadata
Update the application name in package.json and metadata.json to reflect the official branding. Also, update image URLs and market data in useTogelData hook.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-prediksi-arj",
+  "name": "web-of-prediksi-arj",
   "private": true,
   "version": "0.0.0",
   "type": "module",
